fixed bug not loading on mobile

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 .left-bar {
     width: 23%;
-    min-height: 100vh;
+    height: auto;
     border-right: solid 1px #2F3336;
     padding: 10px 60px;
 }
@@ -67,7 +67,7 @@ body {
 
 .middle {
     width: 50%;
-    min-height: 100vh;
+    height: auto;
     border-right: solid 1px #2F3336;
     display: flex;
     flex-direction: column;
@@ -272,9 +272,8 @@ body {
         width: 0;
     }
 
-    .middle {
+    .middle {   
         width: 100%;
-        
     }
 
     .tweet-btn,
